added method GetAllWallets
